# libltc-rs

./: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
examples/: decode.rs  encode.rs  raw_to_wav.py  simple.rs
src/: api.rs  error.rs  lib.rs  raw.rs
src/api/: consts.rs  decoder.rs  encoder.rs  frame.rs  mod.rs
